Update dependency org.apache.tika:tika-core to v2